fixed pixel perfect document

--- a/src/main/resources/declarationoforigin/master.html
+++ b/src/main/resources/declarationoforigin/master.html
@@ -14,7 +14,7 @@
                     <td colspan="2">
                         <table>
                             <tr>
-                                <td><strong th:text="#{section.label.reference}"></strong></td>
+                                <td width="300"><strong th:text="#{section.label.reference}"></strong></td>
                                 <td><strong>[[${line.transportOrderLineNo}]]</strong></td>
                             </tr>
                             <tr>
